--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div id="login-section">
         <!-- Logo de la Barbería -->
         <div class="login-logo-container">
-            <img src="images/logo.png" alt="Logo Barbería Barba´ros" id="login-logo">
+            <img src="images/logo.PNG" alt="Logo Barbería Barba´ros" id="login-logo">
         </div>
         <h2 style="margin-bottom: var(--margin-xl);">Barbería Barba´ros</h2>
         <form id="loginForm">
@@ -81,7 +81,7 @@
                 <i class="fas fa-bars"></i>
             </button>
             <div class="app-title-container">
-                <img src="images/logo.png" alt="Logo Barbería" id="top-bar-logo">
+                <img src="images/logo.PNG" alt="Logo Barbería" id="top-bar-logo">
                 <div id="app-title">Barbería Barba´ros</div>
             </div>
             <div class="top-bar-right">
